0.7.0.6
Remove parameter UseArtifacts from New-NavContainer
Add a test in Download-Artifacts to check the validity of Sas Token
Force download new generic if generic version is lower than 0.1.0.4 in New-BcContainer
Issue #1033 grab collation.txt from the my folder when using Clean-BcContainerDatabase with -useNewDatabase
Issue #997 Cside cannot connect to containername\SQLEXPRESS on some machines

0.7.0.5
Check country and artifactUrl on determining whether or not to rebuild images
Get-NavContainerImageLabels now supports getting labels from an local image (without registry)
Added new function Get-BcArtifactUrl to get artifact Urls for Business Central builds (thanks Waldo)
Added new function Get-NavArtifactUrl to get artifact Urls for Dynamics NAV builds (using Get-BcArtifactUrl)

0.7.0.4
Issue #1016 EnableTaskScheduler parameter is ignored when using traefik
Fix regression - New-BcContainer - support blank platform in app artifact
Add retry algorithm to Download-Artifacts
Dump Additional Parameters during start
Add parameter keepDays to Flush-ContainerHelperCache to indicate that cache used during this number of days should be kept (Only implemented for artifacts)
Add parameter forceRedirection to Download-Artifacts to force download redirection artifacts
-alwaysPull are transferred to Download-Artifacts (-ForceRedirection) to re-download redirection artifacts
Do not rebuild images based on -alwaysPull, instead compare version, osversion and generic tag and rebuild only if different

0.7.0.3
New-BcContainer - support blank platform in app artifact
Replace-BcServerContainer supports ArtifactUrl
Move temporary build folder for New-BcImage to c:\$TMP$-<imagename> (due to filename lengths of more 260)
Add new function Download-Artifacts to download artifacts from ArtifactUrl

0.7.0.2
Regression - Flush-ContainerHelperCache fails if c:\bcartifacts.cache doesn't exist
Regression - New-BcImage disn't use the new artifacts cache path

0.7.0.1